unpackaged/main/default/objects/tspa__Visual_Support_Request__c/tspa__Visual_Support_Request__c.object-meta.xml
<CustomObject>
    <label>Visual Remote Assistant-Support Request</label>
    <nameField>
        <displayFormat>VSR-{00000}</displayFormat>
        <label>Visual Support Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visual Remote Assistant-Support Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>