unpackaged/main/default/objects/tspa__Visual_Support_Request__c/fields/tspa__AcceptedByAgent__c.field-meta.xml
<CustomField>
    <fullName>tspa__AcceptedByAgent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepted By Agent</label>
    <type>Checkbox</type>
</CustomField>