unpackaged/main/default/objects/tspa__Visual_Support_Request__c/fields/tspa__AgentWorkStatus__c.field-meta.xml
<CustomField>
    <fullName>tspa__AgentWorkStatus__c</fullName>
    <label>Agent Work Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Opened</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>DeclinedOnPushTimeout</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>