unpackaged/main/default/objects/tspa__Visual_Support_Request__c/fields/tspa__AppleStoreConfiguration__c.field-meta.xml
<CustomField>
    <fullName>tspa__AppleStoreConfiguration__c</fullName>
    <label>Apple Store Configuration</label>
    <length>15</length>
    <type>Text</type>
</CustomField>