unpackaged/main/default/objects/tspa__Visual_Support_Request__c/fields/tspa__AssignedDateTime__c.field-meta.xml
<CustomField>
    <fullName>tspa__AssignedDateTime__c</fullName>
    <label>Assigned Date/Time</label>
    <type>DateTime</type>
</CustomField>