unpackaged/main/default/objects/tspa__Visual_Support_Request__c/fields/tspa__Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>tspa__Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>TextArea</type>
</CustomField>