unpackaged/main/default/objects/tspa__Visual_Support_Request__c/fields/tspa__CancellationDateTime__c.field-meta.xml
<CustomField>
    <fullName>tspa__CancellationDateTime__c</fullName>
    <label>Cancellation Date/Time</label>
    <type>DateTime</type>
</CustomField>