unpackaged/main/default/objects/tspa__Visual_Support_Request__c/fields/tspa__Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>tspa__Channel_Id__c</fullName>
    <label>Channel Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>