unpackaged/main/default/objects/tspa__Visual_Support_Request__c/fields/tspa__CloseDateTime__c.field-meta.xml
<CustomField>
    <fullName>tspa__CloseDateTime__c</fullName>
    <label>Close Datetime</label>
    <type>DateTime</type>
</CustomField>