unpackaged/main/default/objects/tspa__Visual_Support_Request__c/fields/tspa__Community_Id__c.field-meta.xml
<CustomField>
    <fullName>tspa__Community_Id__c</fullName>
    <label>Community Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>