unpackaged/main/default/objects/tspa__Visual_Support_Request__c/fields/tspa__Community_URL__c.field-meta.xml
<CustomField>
    <fullName>tspa__Community_URL__c</fullName>
    <label>Community URL</label>
    <type>Url</type>
</CustomField>