unpackaged/main/default/objects/tspa__Visual_Support_Request__c/fields/tspa__CreationTimestamp__c.field-meta.xml
<CustomField>
    <fullName>tspa__CreationTimestamp__c</fullName>
    <label>Creation Timestamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>