unpackaged/main/default/objects/tspa__Visual_Support_Request__c/fields/tspa__EnableAudio__c.field-meta.xml
<CustomField>
    <fullName>tspa__EnableAudio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Audio</label>
    <type>Checkbox</type>
</CustomField>