unpackaged/main/default/objects/tspa__Visual_Support_Request__c/fields/tspa__Live_Agent__c.field-meta.xml
<CustomField>
    <fullName>tspa__Live_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Live Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visual_Remote_Assistant_Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>