unpackaged/main/default/objects/tspa__Visual_Support_Request__c/fields/tspa__RecordId__c.field-meta.xml
<CustomField>
    <fullName>tspa__RecordId__c</fullName>
    <label>RecordId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>