unpackaged/main/default/objects/tspa__Visual_Support_Request__c/fields/tspa__Redirect__c.field-meta.xml
<CustomField>
    <fullName>tspa__Redirect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Redirect</label>
    <type>Checkbox</type>
</CustomField>