unpackaged/main/default/objects/tspa__Visual_Support_Request__c/fields/tspa__Session__c.field-meta.xml
<CustomField>
    <fullName>tspa__Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <referenceTo>tspa__TechSeeSessions__c</referenceTo>
    <relationshipLabel>Visual Remote Assistant-Support Requests</relationshipLabel>
    <relationshipName>Visual_Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>