unpackaged/main/default/objects/tspa__Visual_Support_Request__c/fields/tspa__Session_Active__c.field-meta.xml
<CustomField>
    <fullName>tspa__Session_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Session Active</label>
    <type>Checkbox</type>
</CustomField>