unpackaged/main/default/objects/tspa__Visual_Support_Request__c/listViews/tspa__All.listView-meta.xml
<ListView>
    <fullName>tspa__All</fullName>
    <columns>NAME</columns>
    <columns>tspa__Session__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>